--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -19,6 +19,7 @@ services:
       - DB_USERNAME=root
       - DB_PASSWORD=root
       - DB_NAME=polkascan
+      - TYPE_REGISTRY=polymesh
       - SUBSTRATE_RPC_URL=http://78.47.38.110:9933/
       - SUBSTRATE_ADDRESS_TYPE=2
     depends_on:
