Fix errors with SUBSTRATE_STORAGE_INDICES

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -22,6 +22,7 @@ services:
       - TYPE_REGISTRY=polymesh
       - SUBSTRATE_RPC_URL=http://78.47.38.110:9933/
       - SUBSTRATE_ADDRESS_TYPE=2
+      - SUBSTRATE_STORAGE_INDICES=Accounts
     depends_on:
       - redis
       - mysql
