Split compose files for Aldeberan, dev and local

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,71 +1,91 @@
-version: "3.2"
+version: "3"
 
 services:
   harvester-api:
-    build: .
-    image: &app polymesh-harvester:latest
+    image: 414255671868.dkr.ecr.us-east-2.amazonaws.com/polymesh-harvester:latest
+    hostname: harvester-api
     ports:
       - "8000:8000"
     volumes:
-      - ".:/usr/src/app"
+      - "/usr/src/app"
     command: ./start.sh
+    links:
+      - redis
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: polymesh-harvester-dev
+        awslogs-region: us-east-2
+        awslogs-stream-prefix: harvester-api
     environment: &env
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
       - PYTHONPATH=/usr/src/app
-      - ENVIRONMENT=dev
-      - DB_HOST=mysql
+      - ENVIRONMENT=prod
+      - DB_HOST=polymesh-explorer-dev.cqa2yhdx1bm9.us-east-2.rds.amazonaws.com
       - DB_PORT=3306
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
-      - DB_NAME=polkascan
+      - DB_USERNAME=admin
+      - DB_PASSWORD=Y5maT2dUsE59BBVe
+      - DB_NAME=polymesh-harvester-dev
       - TYPE_REGISTRY=polymesh
-      - SUBSTRATE_RPC_URL=http://78.47.38.110:9933/
-      - SUBSTRATE_ADDRESS_TYPE=2
+      - SUBSTRATE_RPC_URL=http://78.47.38.110:9933
+      - SUBSTRATE_ADDRESS_TYPE=42
       - SUBSTRATE_STORAGE_INDICES=Accounts
-    depends_on:
-      - redis
-      - mysql
-
+      - NEW_SESSION_EVENT_HANDLER=True
+      
   harvester-worker:
-    build: .
-    image: *app
+    image: 414255671868.dkr.ecr.us-east-2.amazonaws.com/polymesh-harvester:latest
     volumes:
-      - ".:/usr/src/app"
+      - "/usr/src/app"
     command: celery -A app.tasks worker --loglevel=INFO
-    environment: *env
-    depends_on:
+    links:
       - redis
-      - mysql
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: polymesh-harvester-dev
+        awslogs-region: us-east-2
+        awslogs-stream-prefix: worker
+    environment: *env
 
   harvester-beat:
-    build: .
-    image: *app
+    image: 414255671868.dkr.ecr.us-east-2.amazonaws.com/polymesh-harvester:latest
     volumes:
-      - ".:/usr/src/app"
-    command: celery -A app.tasks beat --loglevel=INFO  --schedule="data/celerybeat-schedule" --pidfile="data/celerybeat.pid"
-    environment: *env
-    depends_on:
+      - "/usr/src/app"
+      - "/usr/src/app/data"
+    links:
       - redis
+    command: celery -A app.tasks beat --loglevel=INFO  --schedule="data/celerybeat-schedule" --pidfile="data/celerybeat.pid"
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: polymesh-harvester-dev
+        awslogs-region: us-east-2
+        awslogs-stream-prefix: beat
+    environment: *env
 
   harvester-monitor:
-    build: .
-    image: *app
+    image: 414255671868.dkr.ecr.us-east-2.amazonaws.com/polymesh-harvester:latest
     ports:
       - "5555:5555"
-    command: flower -A app.tasks --port=5555 --broker=redis://redis:6379/0
-    depends_on:
+    links:
       - redis
+    command: flower -A app.tasks --port=5555 --broker=redis://redis:6379/0
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: polymesh-harvester-dev
+        awslogs-region: us-east-2
+        awslogs-stream-prefix: monitor
 
   redis:
     image: redis:3.2.11
-
-  mysql:
-    image: mysql:latest
-    volumes:
-      - "./data/mysql:/var/lib/mysql"
     ports:
-      - "33061:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=polkascan
+      - 6379:6379
+    hostname: redis
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: polymesh-harvester-dev
+        awslogs-region: us-east-2
+        awslogs-stream-prefix: redis
