--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       - SUBSTRATE_RPC_URL=http://78.47.162.27:5933/
       - SUBSTRATE_ADDRESS_TYPE=42
       - SUBSTRATE_STORAGE_INDICES=Accounts
-
+      - NEW_SESSION_EVENT_HANDLER=True
+      
   harvester-worker:
     image: 414255671868.dkr.ecr.us-east-2.amazonaws.com/polymesh-harvester:latest
     volumes:
