--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -21,17 +21,17 @@ services:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
       - PYTHONPATH=/usr/src/app
-      - ENVIRONMENT=prod
-      - DB_HOST=polymesh-explorer-dev.cqa2yhdx1bm9.us-east-2.rds.amazonaws.com
-      - DB_PORT=3306
-      - DB_USERNAME=admin
-      - DB_PASSWORD=Y5maT2dUsE59BBVe
-      - DB_NAME=polymesh-harvester-dev
       - TYPE_REGISTRY=polymesh
-      - SUBSTRATE_RPC_URL=http://78.47.38.110:9933
       - SUBSTRATE_ADDRESS_TYPE=42
       - SUBSTRATE_STORAGE_INDICES=Accounts
       - NEW_SESSION_EVENT_HANDLER=True
+      - ENVIRONMENT=${ENVIRONMENT}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - SUBSTRATE_RPC_URL=${SUBSTRATE_RPC_URL}
       
   harvester-worker:
     image: 414255671868.dkr.ecr.us-east-2.amazonaws.com/polymesh-harvester:latest
