--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -13,16 +13,17 @@ services:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
       - PYTHONPATH=/usr/src/app
-      - ENVIRONMENT=dev
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
-      - DB_NAME=polkascan
-      - SUBSTRATE_RPC_URL=http://78.47.38.110:9933/
+      - TYPE_REGISTRY=polymesh
       - SUBSTRATE_ADDRESS_TYPE=42
       - SUBSTRATE_STORAGE_INDICES=Accounts
       - NEW_SESSION_EVENT_HANDLER=True
+      - ENVIRONMENT=${ENVIRONMENT}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - SUBSTRATE_RPC_URL=${SUBSTRATE_RPC_URL}
     depends_on:
       - redis
       - mysql
