--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 alembic==1.1.0
-amqp==2.4.1
+amqp==2.6.0
 atomicwrites==1.3.0
 attrs==19.1.0
 Babel==2.6.0
@@ -48,5 +48,5 @@ pydevd-pycharm
 py-sr25519-bindings>=0.1.2
 py-bip39-bindings>=0.1.4
 
-polymath-scalecodec>=0.3.20
-polymath-substrate-interface>=0.3.20
+polymath-scalecodec>=0.4.0a6
+polymath-substrate-interface>=0.4.0a6
